@startuml
skinparam classAttributeIconSize 0
hide circle
hide attributes
show methods

package "UserStory03 — Update Users (Clean)" {
  class AdminUsersPage <<boundary>> {
    +handle(): void
    -showList(flash?, error?): void
    -showEdit(userid:int, flash?, error?, prefill?): void
    -submitUpdate(data: array): void
  }

  class UsersController <<control>> {
    +listUsers(): Result
    +getUser(userid:int): Result
    +updateUser(userid:int, data: array): Result
    -validate(data: array): string?
  }

  class User <<entity>> {
    +all(): UserRow[]
    +findById(userid:int): UserRow?
    +existsById(userid:int): bool
    +emailUniqueForUpdate(userid:int, email:string): bool
    +updateBasic(userid:int, data: array): void
  }

  AdminUsersPage --> UsersController : showList()/showEdit()/submitUpdate()
  UsersController ..> User : all(), findById(), existsById(), emailUniqueForUpdate(), updateBasic()
}
@enduml
